# rest_compare

./: .dockerignore  .gitignore  Makefile  README.md  benchmark.sh  loadtest.js  pull_model.sh
golang/: go.mod  main.go  ml.go
python/: Dockerfile  main.py  ml.py
rust_actix/: Cargo.toml  Dockerfile  image.sh
rust_actix/examples/: info.rs  ml.rs  tokenizer.rs
rust_actix/src/: main.rs  ml.rs
