[package]
name = "rust_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = "1.0"
serde_json = "1.0"
ort = { version = "2.0.0-rc.4", features = [ "openvino" ] }
tokenizers = "0.19.1"
log = "0.4.22"